
[Test_FullWorkflow_Create_S3_Parameter_YAML_multi_Simple - 1]
>>>S3ApiMockClient.GetObjectAttributes.Input
{
  Bucket: "..",
  Key: "../test-secrets/yaml/sopsfile-complex-parameters.enc-age.yaml"
}
---

[Test_FullWorkflow_Create_S3_Parameter_YAML_multi_Simple - 2]
>>>S3MAnagerMockClient.Download.Input
{
  Bucket: "..",
  Key: "../test-secrets/yaml/sopsfile-complex-parameters.enc-age.yaml"
}
---

[Test_FullWorkflow_Create_S3_Parameter_YAML_multi_Simple - 3]
>>>SecretsManagerMockClient.PutParameterValue.Input
main.putParameterValueInputNotSecure{
    _:              struct {}{},
    AllowedPattern: (*string)(nil),
    DataType:       (*string)(nil),
    Description:    (*string)(nil),
    KeyId:          &"",
    Name:           &"/foo/bar/key1",
    Overwrite:      &bool(true),
    Policies:       (*string)(nil),
    Tags:           nil,
    Tier:           (*string)(nil),
    Type:           &"SecureString",
    Value:          &"foo",
}
---

[Test_FullWorkflow_Create_S3_Parameter_YAML_multi_Simple - 4]
>>>SecretsManagerMockClient.PutParameterValue.Input
main.putParameterValueInputNotSecure{
    _:              struct {}{},
    AllowedPattern: (*string)(nil),
    DataType:       (*string)(nil),
    Description:    (*string)(nil),
    KeyId:          &"",
    Name:           &"/foo/bar/key2",
    Overwrite:      &bool(true),
    Policies:       (*string)(nil),
    Tags:           nil,
    Tier:           (*string)(nil),
    Type:           &"SecureString",
    Value:          &"bar",
}
---

[Test_FullWorkflow_Create_S3_Parameter_YAML_multi_Simple - 5]
>>>syncSopsToSecretsmanager
arn:aws:arn:custom:sopssync:eu-central-1:123456789012:parameter/testsecret
map[string]interface {}{
    "Count":  int(2),
    "Prefix": "/",
}
nil
---

[Test_FullWorkflow_Create_S3_Parameter_YAML_multi_Simple_custom_keys - 1]
>>>S3ApiMockClient.GetObjectAttributes.Input
{
  Bucket: "..",
  Key: "../test-secrets/yaml/sopsfile-complex-parameters.enc-age.yaml"
}
---

[Test_FullWorkflow_Create_S3_Parameter_YAML_multi_Simple_custom_keys - 2]
>>>S3MAnagerMockClient.Download.Input
{
  Bucket: "..",
  Key: "../test-secrets/yaml/sopsfile-complex-parameters.enc-age.yaml"
}
---

[Test_FullWorkflow_Create_S3_Parameter_YAML_multi_Simple_custom_keys - 3]
>>>SecretsManagerMockClient.PutParameterValue.Input
main.putParameterValueInputNotSecure{
    _:              struct {}{},
    AllowedPattern: (*string)(nil),
    DataType:       (*string)(nil),
    Description:    (*string)(nil),
    KeyId:          &"",
    Name:           &"_foo.bar.key1",
    Overwrite:      &bool(true),
    Policies:       (*string)(nil),
    Tags:           nil,
    Tier:           (*string)(nil),
    Type:           &"SecureString",
    Value:          &"foo",
}
---

[Test_FullWorkflow_Create_S3_Parameter_YAML_multi_Simple_custom_keys - 4]
>>>SecretsManagerMockClient.PutParameterValue.Input
main.putParameterValueInputNotSecure{
    _:              struct {}{},
    AllowedPattern: (*string)(nil),
    DataType:       (*string)(nil),
    Description:    (*string)(nil),
    KeyId:          &"",
    Name:           &"_foo.bar.key2",
    Overwrite:      &bool(true),
    Policies:       (*string)(nil),
    Tags:           nil,
    Tier:           (*string)(nil),
    Type:           &"SecureString",
    Value:          &"bar",
}
---

[Test_FullWorkflow_Create_S3_Parameter_YAML_multi_Simple_custom_keys - 5]
>>>syncSopsToSecretsmanager
arn:aws:arn:custom:sopssync:eu-central-1:123456789012:parameter/testsecret
map[string]interface {}{
    "Count":  int(2),
    "Prefix": "_",
}
nil
---
